--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -35,7 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
         android:orientation="horizontal">
-        <!--Time And Location ET -->
+
+
+        <!--Location Btn -->
 
         <Button
             android:id="@+id/pLocationBtn"
@@ -63,36 +65,64 @@
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:orientation="horizontal">
-            <!--Time And Location ET -->
-        <Button
-            android:id="@+id/pTimeSetBtn"
-            android:text="Add Time"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight = "1"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Day:"
+                android:textSize="30dp"
+                android:layout_weight = "1"/>
+
+            <EditText
+                android:id="@+id/editTextDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Select date"
+                android:layout_weight = "1"/>
 
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/timeStartTagTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Starts At: "
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            android:text="Starts At:"
+            android:textSize="30dp"
+            android:layout_weight = "1"/>
+
+        <EditText
+            android:id="@+id/editTextStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Select start time"
+            android:layout_weight = "1"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/timeEndTagTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Ends At: "
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            android:text="Ends At:"
+            android:textSize="30dp"
+            android:layout_weight = "1"/>
+
+        <EditText
+            android:id="@+id/editTextEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Select end time"
+            android:layout_weight = "1"/>
+    </LinearLayout>
+
 
         <!---EditText: Input post description-->
         <EditText
