--- a/app/src/main/res/drawable/yellow_frame.xml
+++ b/app/src/main/res/drawable/yellow_frame.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" /> <!-- Button's background color -->
-    <stroke android:width="2dp" android:color="@color/yellow" /> <!-- Border color and width -->
-    <corners android:radius="5dp" /> <!-- If you want rounded corners -->
+    <solid android:color="@android:color/transparent" />
+    <stroke android:width="2dp" android:color="@color/yellow" />
+    <corners android:radius="5dp" />
 </shape>
+
