--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -13,6 +13,16 @@
         android:layout_margin="2dp"
         android:orientation="vertical">
 
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:src="@drawable/img_5"
+            android:contentDescription="@string/back_button_description" />
+
+
+
         <!---EditText: input post title-->
         <EditText
             android:id = "@+id/pTitleEt"
